<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SEEK</string>
    <string name="tab_page_num">This is tab: </string>
    <string name="hello_world">Hello world! </string>
    <string name="tab_page_num_menu">This is tab with menu: </string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="profile_text">Edit Profile</string>
    <string name="first_name_text">First Name:</string>
    <string name="last_name_text">Last Name:</string>
    <string name="interest_tags_text">Interest Tags:</string>
    <string name="post_code_text">Post Code:</string>
    <string name="phone_text">Phone Number:</string>
    <string name="dob_text">Date of Birth:</string>
    <string name="use_current_location">Use my current location</string>
    <string name="others_current_location">Others can see my current details</string>
    <string name="others_contact_details">Others can see my contact details</string>
    <string name="under18_text">Under 18 years old?</string>
    <string name="gender">Gender:</string>
    <string name="male_checkbox">Male</string>
    <string name="female_checkbox">Female</string>
    <string name="expertise_text">Expertise</string>
    <string name="user_photo">User Photo</string>
    <string name="email_address_hint">Email Address</string>
    <string name="edit_button">Edit</string>
    <string name="save_button">Save</string>
    <string name="title_activity_fragment_adapter">FragmentAdapter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event_search">Search Event</string>
    <string name="title_activity_register_page">Register Page</string>
    <string name="title_activity_tab_fragment">Tab Fragment</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_user_profile">Edit Profile</string>
    <string name="title_activity_start_page">Start Page</string>
    <string name="password_hint">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login_button">Login</string>
    <string name="new_user_link">New user?</string>
    <string name="unltd_link">UnLtd.org.uk</string>
    <string name="seek_text">SEEK</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_email_address">Confirm email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_checkbox">By signing up, you agree to the</string>
    <string name="privacy_policy"><a href="https://unltd.org.uk/about_unltd/frequently-asked-questions-and-answers/">Privacy Policy and Terms of Service</a></string>
    <string name="register_button">Register</string>
    <string name="contact_button">Contact</string>
    <string name="event_button">Event</string>
    <string name="venue_button">Venue</string>
    <string name="media_button">Media</string>
    <string name="message_button">Message</string>
    <string name="admin_button">Admin</string>
    <string name="title_activity_event_page">Event</string>
    <string name="events_radius_from_me_1">Events within</string>
    <string name="venues_radius_from_me_1">Venues within</string>
    <string name="contacts_radius_from_me_1">Contacts within</string>
    <string name="events_radius_from_me_2">km from me</string>
    <string name="region_text">Region</string>
    <string name="search_text">Search</string>
    <string name="create_text">Create</string>
    <string name="title_activity_event_results">Event Search Results</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="dummy_text">Dummy event search results</string>
    <string name="dummy_venue_text">Dummy venue search results</string>
    <string name="dummy_contact_text">Dummy contact search results</string>
    <string name="title_activity_event_create">Create Event</string>
    <string name="title_activity_event_edit">Edit Event</string>
    <string name="event_title">Event Name:</string>
    <string name="venue_title">Venue Name</string>
    <string name="event_date">Event Date</string>
    <string name="start_date">Start Date:</string>
   <string name="further_info"> For further info:</string>
    <string name="end_date">End Date:</string>
    <string name="max_cap">Max Capacity:</string>
    <string name="event_description">Event Description:</string>
    <string name="address">Address:</string>
    <string name="type_text">Venue Type:</string>
    <string name="rate_text">Rate:</string>
    <string name="hourly_text">hourly</string>
     <string name="name">Name:</string>
    <string name="gbp_text">£</string>
    <string name="venue_description">Venue Description:</string>
    <string name="daily_text">daily</string>
    <string name="details_text">This is details of event</string>
    <string name="title_activity_venue_search">Venue</string>
    <string name="details_venue_text">This is details of venue</string>
    <string name="details_contact_text">This is details of a contact</string>
    <string name="title_activity_venue_page">Venue</string>
    <string name="title_activity_venue_results">Venue Search Results</string>
    <string name="title_activity_venue_create">Create Venue</string>
    <string name="title_activity_venue_user_list">User Created Venue</string>
    <string name="title_activity_venue_edit">Edit Venue</string>
    <string name="search_icon">search icon</string>
    <string name="title_activity_venue_details">Venue Details</string>
    <string name="title_activity_contact_search">Contact Search</string>
    <string name="title_activity_contact_results">Contact Search Results</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="name_label">Name</string>
    <string name="age_label">Age</string>
    <string name="title_activity_home_page">Home</string>
    <string name="delete_text">Delete</string>
    <string name="save_text">Save</string>
    <string name="register_link">Register Link:</string>
    <string name="edit">Edit</string>
    <string name="title_activity_media">Media</string>
    <string name="title_activity_message">Message</string>
    <string name="title_activity_admin">Admin</string>
    <string name="getting_started">Getting Started</string>
    <string name="finance">Finance</string>
    <string name="legal">Legal</string>
    <string name="marketing">Marketing</string>
    <string name="mentoring">Mentoring</string>
    <string name="staff_recruitment">Staff &amp; Recruitment</string>
    <string name="grow_venture">Growing your venture</string>
    <string name="working_se">Working with social entrepreneurs</string>
    <string name="webinars">Upcoming Webinars</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="deregister">Deregister</string>
    <string name="send_msg">Send message to UnLtd</string>
    <string name="email">Email address:</string>
    <string name="write">Write something here...</string>
    <string name="address_text">e.g 87,Godolphin Road,London</string>
    <string name="contact_activity">Contact</string>
    <string name="event_activity">Event</string>
    <string name="venue_activity">Venue</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="search_region">Search by region:</string>
    <string name="search_radius">Search events within:</string>
    <string name="search_radius_venue">Search venues within:</string>
    <string name="search_radius_contact">Search contacts within:</string>
    <string name="search_radius2">e.g. 5</string>
    <string name="search_freetext">Search keyword:</string>
    <string name="search_postcode">Search by postcode or place:</string>
    <string name="postcode_hint">e.g. N7 9BA</string>
    <string name="phone_hint">e.g. 07489520036</string>
    <string name="search_postcode2">e.g. N79BA or London or Leyton</string>
    <string name="search_by_email">Search by email address:</string>
    <string name="subject">Subject:</string>

    <string-array name="radius_arrays">
        <item>less than 1 km</item>
        <item>1 &#8211; 10 km</item>
        <item>11 &#8211; 20 km</item>
        <item>21 &#8211; 30 km</item>
        <item>31 &#8211; 40 km</item>
        <item>41 &#8211; 50 km</item>
        <item>more than 50 km</item>
    </string-array>
    <string-array name="region_arrays">
        <item>East</item>
        <item>East Midlands</item>
        <item>London</item>
        <item>North East</item>
        <item>North West</item>
        <item>Northern Ireland</item>
        <item>Scotland</item>
        <item>South East</item>
        <item>South West</item>
        <item>Wales</item>
        <item>West Midlands</item>
        <item>Yorkshire and the Humber</item>
    </string-array>
    <string-array name="event_sort">
        <item>date</item>
        <item>distance</item>
    </string-array>
    <string-array name="venue_sort">
        <item>distance</item>
        <item>price</item>
    </string-array>
    <string-array name="venue_type">
        <item>Meeting Room</item>
        <item>Conference Room</item>
        <item>Studio</item>
        <item>Auditorium</item>
        <item>Board Room</item>
        <item>Open Space</item>
        <item>Creative Space</item>
    </string-array>
    <string-array name="contact_sort">
        <item>alphabetically</item>
        <item>distance</item>
    </string-array>
    <string-array name="age_range">
        <item>&#60; 18</item>
        <item>18 &#8211; 25</item>
        <item>26 &#8211; 35</item>
        <item>36 &#8211; 45</item>
        <item>46 &#8211; 55</item>
        <item>&#62; 56</item>
    </string-array>
    <string-array name="msg_type">
        <item>Enquiries</item>
        <item>Feedback</item>
        <item>Support</item>
        <item>Events</item>
        <item>Mentoring</item>
        <item>Resources</item>
        <item>Others</item>
    </string-array>
    <string-array name="expertiseSpinner">
        <item>Business</item>
        <item>Communications</item>
        <item>Design</item>
        <item>Education</item>
        <item>Engineering</item>
        <item>Fundraising</item>
        <item>IT</item>
        <item>Journalism</item>
        <item>Marketing</item>
        <item>Project Management</item>
        <item>Research</item>
        <item>Others</item>
    </string-array>

    <string name="submit">Submit</string>

</resources>