<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.compgc02.team26.seek.Media" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <Button
            android:id="@+id/getting_started"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick1"
            android:text="@string/getting_started" />

        <Button
            android:id="@+id/finance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick2"
            android:text="@string/finance" />

        <Button
            android:id="@+id/legal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick3"
            android:text="@string/legal" />

        <Button
            android:id="@+id/marketing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick4"
            android:text="@string/marketing" />

        <Button
            android:id="@+id/mentoring"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick5"
            android:text="@string/mentoring" />

        <Button
            android:id="@+id/staff_recruitment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick6"
            android:text="@string/staff_recruitment" />

        <Button
            android:id="@+id/grow_venture"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick7"
            android:text="@string/grow_venture" />

        <Button
            android:id="@+id/working_se"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick8"
            android:text="@string/working_se" />

        <Button
            android:id="@+id/webinars"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick9"
            android:text="@string/webinars" />
    </LinearLayout>

</ScrollView>