<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.compgc02.team26.seek.VenueEdit" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/venueTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/venue_title" />

        <EditText
            android:id="@+id/venueTitle_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingBottom="5dp" />

        <TextView
            android:id="@+id/venueType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_text" />

        <Spinner
            android:id="@+id/typeSpinner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|fill_vertical"
            android:entries="@array/venue_type"
            android:paddingBottom="5dp" />

       <TextView
            android:id="@+id/addresstext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_text"
            android:inputType="text" />

        <TextView
            android:id="@+id/postCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_code_text" />

        <EditText
            android:id="@+id/postcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postcode_hint"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/maxCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_cap" />

        <EditText
            android:id="@+id/maxCap_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingBottom="5dp" />

        <TextView
            android:id="@+id/venueDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|fill_vertical"
            android:text="@string/venue_description" />

        <EditText
            android:id="@+id/venueDescription_input"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:background="@drawable/round"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:paddingBottom="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/saveButton1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_text" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_text" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>