<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context="com.compgc02.samsudin.seek" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/userProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/profile_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name_text" />

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name_text"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name_text" />

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name_text"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_text" />

        <EditText
            android:id="@+id/phoneInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_text"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/postcodeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post_code_text" />

            <EditText
                android:id="@+id/postcode1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/postcode2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dobText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/dob_text" />

            <EditText
                android:id="@+id/birthInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:onClick="datepickerClick" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/under18Check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/under18_text" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/male_checkbox" />

            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/female_checkbox" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/interestTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest_tags_text" />

            <EditText
                android:id="@+id/interestTagsInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" >
            </EditText>
        </LinearLayout>

        <CheckBox
            android:id="@+id/useCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location" />

        <CheckBox
            android:id="@+id/othersSeeCrntLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others_current_location" />

        <CheckBox
            android:id="@+id/othersSeeCntctDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others_contact_details" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save_button" />
    </LinearLayout>

</ScrollView>